--- a/map-service/binding/CMakeLists.txt
+++ b/map-service/binding/CMakeLists.txt
@@ -100,10 +100,11 @@ set_target_properties(${TARGET_LOCAL_LIB}
 )
 
 add_custom_command(TARGET ${TARGET_PUB_LIB} POST_BUILD
-   COMMAND mkdir -p ${PROJECT_BINARY_DIR}/package/lib
-   COMMAND cp -f ${PROJECT_BINARY_DIR}/map-service/binding/lib${TARGET_PUB_LIB}.so ${PROJECT_BINARY_DIR}/package/lib
+   COMMAND mkdir -p ${PROJECT_BINARY_DIR}/package/root/lib
+   COMMAND cp -f ${PROJECT_BINARY_DIR}/map-service/binding/lib${TARGET_PUB_LIB}.so ${PROJECT_BINARY_DIR}/package/root/lib
    )
 
 add_custom_command(TARGET ${TARGET_LOCAL_LIB} POST_BUILD
-   COMMAND cp -f ${PROJECT_BINARY_DIR}/map-service/binding/lib${TARGET_LOCAL_LIB}.so ${PROJECT_BINARY_DIR}/package/lib
+   COMMAND cp -f ${PROJECT_BINARY_DIR}/map-service/binding/lib${TARGET_LOCAL_LIB}.so ${PROJECT_BINARY_DIR}/package/root/lib
+   COMMAND cp -f ${CMAKE_SOURCE_DIR}/map-service/package/config.xml ${PROJECT_BINARY_DIR}/package/root
    )
